d20 Modern'ish/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\Paul Cummings\Desktop\d20 Modern'ish
-d
C:\Users\Paul Cummings\Desktop\d20 Modern'ish\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\Paul Cummings\Desktop\d20 Modern'ish\Attributes.java
<---- end of javadoc command ---->
Loading source file C:\Users\Paul Cummings\Desktop\d20 Modern'ish\Attributes.java...
Constructing Javadoc information...
C:\Users\Paul Cummings\Desktop\d20 Modern'ish\Attributes.java:144: error: method setAttributeModifier(int) is already defined in class Attributes
    public void setAttributeModifier(int baseAttribute)
                ^
C:\Users\Paul Cummings\Desktop\d20 Modern'ish\Attributes.java:154: error: method setAttributeModifier(int) is already defined in class Attributes
    public void setAttributeModifier(int baseAttribute)
                ^
C:\Users\Paul Cummings\Desktop\d20 Modern'ish\Attributes.java:164: error: method setAttributeModifier(int) is already defined in class Attributes
    public void setAttributeModifier(int baseAttribute)
                ^
C:\Users\Paul Cummings\Desktop\d20 Modern'ish\Attributes.java:174: error: method setAttributeModifier(int) is already defined in class Attributes
    public void setAttributeModifier(int baseAttribute)
                ^
C:\Users\Paul Cummings\Desktop\d20 Modern'ish\Attributes.java:184: error: method setAttributeModifier(int) is already defined in class Attributes
    public void setAttributeModifier(int baseAttribute)
                ^
C:\Users\Paul Cummings\Desktop\d20 Modern'ish\Attributes.java:194: error: method setAttributeModifier(int) is already defined in class Attributes
    public void setAttributeModifier(int baseAttribute)
                ^
Standard Doclet version 1.8.0_60
Building tree for all the packages and classes...
Generating C:\Users\Paul Cummings\Desktop\d20 Modern'ish\doc\Attributes.html...
C:\Users\Paul Cummings\Desktop\d20 Modern'ish\Attributes.java:11: warning - @Paul is an unknown tag.
C:\Users\Paul Cummings\Desktop\d20 Modern'ish\Attributes.java:11: warning - @version-1.0 is an unknown tag.
C:\Users\Paul Cummings\Desktop\d20 Modern'ish\Attributes.java:570: warning - @ is an unknown tag.
C:\Users\Paul Cummings\Desktop\d20 Modern'ish\Attributes.java:570: warning - @ is an unknown tag.
C:\Users\Paul Cummings\Desktop\d20 Modern'ish\Attributes.java:317: warning - @param argument "constitution" is not a parameter name.
C:\Users\Paul Cummings\Desktop\d20 Modern'ish\Attributes.java:382: warning - @param argument "wndMax" is not a parameter name.
C:\Users\Paul Cummings\Desktop\d20 Modern'ish\Attributes.java:382: warning - @param argument "totalSP" is not a parameter name.
C:\Users\Paul Cummings\Desktop\d20 Modern'ish\Attributes.java:329: warning - @param argument "constitution" is not a parameter name.
C:\Users\Paul Cummings\Desktop\d20 Modern'ish\Attributes.java:329: warning - @return tag cannot be used in method with void return type.
C:\Users\Paul Cummings\Desktop\d20 Modern'ish\Attributes.java:305: warning - @return tag cannot be used in method with void return type.
Generating C:\Users\Paul Cummings\Desktop\d20 Modern'ish\doc\package-frame.html...
Generating C:\Users\Paul Cummings\Desktop\d20 Modern'ish\doc\package-summary.html...
Generating C:\Users\Paul Cummings\Desktop\d20 Modern'ish\doc\constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating C:\Users\Paul Cummings\Desktop\d20 Modern'ish\doc\allclasses-frame.html...
Generating C:\Users\Paul Cummings\Desktop\d20 Modern'ish\doc\allclasses-noframe.html...
Generating C:\Users\Paul Cummings\Desktop\d20 Modern'ish\doc\index.html...
Generating C:\Users\Paul Cummings\Desktop\d20 Modern'ish\doc\stylesheet.css...
16 warnings
